WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308121
REGRESSION(
307243@main
): [GTK][WPE] Scrolling broken with accelerated compositing disabled on HiDPI screens
https://bugs.webkit.org/show_bug.cgi?id=308121
Summary
REGRESSION(307243@main): [GTK][WPE] Scrolling broken with accelerated composi...
Carlos Garcia Campos
Reported
2026-02-18 02:32:16 PST
I forgot to create the Damage for the non-composited gpu rendering with the scaled size.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2026-02-18 02:33:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58917
EWS
Comment 2
2026-02-18 04:53:57 PST
Committed
307754@main
(4d6b4abe2781): <
https://commits.webkit.org/307754@main
> Reviewed commits have been landed. Closing PR #58917 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug