REGRESSION(307243@main): [GTK][WPE] Scrolling broken with accelerated compositing disabled on HiDPI screens https://bugs.webkit.org/show_bug.cgi?id=308121

Reviewed by Nikolas Zimmermann.

I forgot to create the Damage for the non-composited gpu rendering with the scaled size.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/NonCompositedFrameRenderer.cpp:
(WebKit::NonCompositedFrameRenderer::resetFrameDamage):

Canonical link: https://commits.webkit.org/307754@main